examples/bad/return_arr.rs
fn ra() -> [int*2] {
    a: [int*2] = [1, .. ];
    return a;
}

fn main() -> {
    print(ra());
}
